# nexly-test-python

./: pyproject.toml
src/: main.py  models.py
src/extractors/: company_info.py
src/validators/: __init__.py  base.py  company_name.py  report_date.py
