[tool.poetry]
name = "nexly-test-python"
version = "0.1.0"
description = ""
authors = ["Klayd <vladmr.tube@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypdf = "^5.0.1"
dateparser = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
